@@ -19,6 +19,7 @@
 - fix "null" domain netgroup match for "-hosts" map.
 - update kernel patches.
 - add configuration variable to control appending of global options.
+- add command option to set a global mount options string.
 
 20/2/2007 autofs-5.0.1
 ----------------------
